--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-router-dom": "^6.0.2",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.0",
+    "react-spring": "^9.7.1",
+    "three": "^0.150.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
