--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "emoji-mart": "^5.5.2",
+    "lottie-react": "^2.4.0",
+    "lottie-web": "^5.12.2",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-datepicker": "^4.5.0",
