--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.0",
     "react-spring": "^9.7.1",
+    "react-tooltip": "^5.20.0",
     "three": "^0.150.1",
     "web-vitals": "^2.1.0"
   },
