--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "react-router-dom": "^6.0.2",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.29.0",
     "react-spring": "^9.7.1",
     "react-tooltip": "^5.20.0",
+    "slick-carousel": "^1.8.1",
     "three": "^0.150.1",
     "web-vitals": "^2.1.0"
   },
