--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "emoji-mart": "^5.5.2",
     "firebase": "^10.3.0",
     "firestore": "^1.1.6",
+    "jquery": "^3.7.0",
     "lottie-react": "^2.4.0",
     "lottie-web": "^5.12.2",
     "prop-types": "^15.8.1",
@@ -27,8 +28,10 @@
     "react-slick": "^0.29.0",
     "react-spring": "^9.7.1",
     "react-tooltip": "^5.20.0",
+    "react-wavify": "^1.8.3",
     "slick-carousel": "^1.8.1",
     "three": "^0.150.1",
+    "wavify": "^1.0.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
